<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VoteVrai">



    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <android.support.v7.widget.CardView
            android:id="@+id/lo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            >
        <TextView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#00BCD4"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grille_d_evaluation_des_enseignements"/>
        </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_below="@id/lo"
        android:id="@+id/UE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/unite_d_enseignment_ue"
            android:focusableInTouchMode="false"
            tools:ignore="LabelFor" />
        <Spinner
            android:id="@+id/spiEC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/UE"
        android:id="@+id/ty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Semestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Semestre"
            android:focusableInTouchMode="false"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/NomEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Nom de l'enseignant"
            android:focusableInTouchMode="false"
            tools:ignore="LabelFor" />
    </LinearLayout>


    <ListView
        android:layout_below="@+id/ty"
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn"/>

        <LinearLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
            <EditText
                android:id="@+id/commentaire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Commentaire"
                android:inputType="textPersonName"
                android:textColorHint="#BDBDBD" />
        <LinearLayout
            android:background="#c6bebe"
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/annuler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/annuler"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/valider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voter"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>