<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffff">



        <RelativeLayout
            android:id="@+id/rellist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="65dp"
                android:layout_height="100dp"
                android:id="@+id/cardView2">
                <com.example.tavio_syrus_gblokpo.iai_vote.Traitement.CircleImageView
                    android:id="@+id/photo_util_p"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_ins_round">

                </com.example.tavio_syrus_gblokpo.iai_vote.Traitement.CircleImageView>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/cardView2"
                android:backgroundTint="@color/cardview_light_background">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <TextView
                        android:id="@+id/idEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/nomEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textAllCaps="true"
                        android:textStyle="italic"
                        style="@style/AppTheme"
                        android:text="@string/libelle" />
                    <LinearLayout
                        android:id="@+id/ii"
                        android:layout_below="@+id/nomEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/rag"
                            style="@style/AppTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:textSize="15sp"
                            android:text="@string/classement"
                            android:textColor="@color/colorPrimary"
                            android:textAllCaps="true"
                            android:textStyle="italic"
                            android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/rang"
                        style="@style/AppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:textSize="15sp"
                        android:text="@string/_0"
                        android:textColor="@color/colorPrimary"
                        android:textAllCaps="true"
                        android:textStyle="italic"
                        android:layout_weight="1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_below="@+id/ii"
                        android:layout_width="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/oi"
                            style="@style/AppTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:textSize="15sp"
                            android:text="@string/score"
                            android:textColor="@color/colorPrimary"
                            android:textAllCaps="true"
                            android:textStyle="italic"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/score"
                            style="@style/AppTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:textSize="15sp"
                            android:text="@string/score"
                            android:textColor="@color/colorPrimary"
                            android:textAllCaps="true"
                            android:textStyle="italic"
                            android:layout_weight="1"/>
                    </LinearLayout>




                </RelativeLayout>

            </android.support.v7.widget.CardView>



        </RelativeLayout>





    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>